# data_agent-cli

./: .dockerignore  .gitignore  Dockerfile  README.md  dagent-installer.sh  dagent.bat  index.html  install.ps1  install.sh  main.py  pyproject.toml  render.yaml  requirements.txt  server.py  setup_dagent.ps1  style.css  test_smoke.py
agent/: core.py  executor.py  llm.py  prompt.py
data/: loader.py  schema.py
frontend/: app.js  index.html  style.css
test_data/: sales.csv
tools/: plotter.py
website/: CNAME  dagent-installer.bat  dagent-installer.sh  install.ps1  script.js
